; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_set_ns_prop.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_set_ns_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8*, i8*)* @set_ns_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_ns_prop(i32 %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @encode_add_ns(i32 %10, i8* %11)
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @BAD_CAST(i8* %13)
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @BAD_CAST(i8* %15)
  %17 = call i32 @xmlSetNsProp(i32 %9, i32 %12, i32 %14, i32 %16)
  ret void
}

declare dso_local i32 @xmlSetNsProp(i32, i32, i32, i32) #1

declare dso_local i32 @encode_add_ns(i32, i8*) #1

declare dso_local i32 @BAD_CAST(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
